@@ -1,7 +1,7 @@
 # Open terminal in org-xyz-memory root
-# RUN: scripts/compileRun8.sh
+# RUN: scripts/compileRunNoMod9.sh
 
-JH=$JAVA8_HOME
+JH=$JAVA9_HOME
 JAVAC=$JH/bin/javac
 JAVA=$JH/bin/java
 JAR=$JH/bin/jar
@@ -9,8 +9,8 @@ JAR=$JH/bin/jar
 patha=no-maven
 
 cd $patha
-# echo "Local Dir: $(pwd)"
-# echo "Java Dir : $JH"
+# echo PWD:$(pwd)
+# echo $JH
 rm -rf target
 mkdir -p target/test-classes
 
@@ -18,18 +18,22 @@ echo
 echo "--- CLEAN & COMPILE ---"
 
 $JAVAC\
-  -d target/test-classes/\
+  -d target/test-classes\
   -cp libs/*\
   $(find . -name '*.java')
 
 echo "---- RUN ----"
 
 $JAVA\
-  -cp libs/*:target/test-classes:src/test/resources/\
+  --add-exports java.base/jdk.internal.misc=ALL-UNNAMED\
+  --add-exports java.base/jdk.internal.ref=ALL-UNNAMED\
+  --add-opens java.base/java.nio=ALL-UNNAMED\
+  --add-opens java.base/sun.nio.ch=ALL-UNNAMED\
+  -cp libs/*:target/test-classes:src/test/resources\
   org.xyz.memory.RunMain
 
 $JAVA\
-  -cp libs/*:target/test-classes:src/test/resources/\
+  -cp libs/*:target/test-classes:src/test/resources\
   org.xyz.memory.RunMain2
 
 # output the directory structure
